Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8061

QGraphicsView mouseDoubleClickEvent never accepts the event

XMLWordPrintable

    • 730bc064a070e886e10950ccfd59780e8976f5fd

      By looking at the code of QGraphicsView in 4.5.3, it can clearly be seen that QGraphicsView translates the QMouseEvent to QGraphicsSceneMouseEvent and sends it to the scene but never sets the accepted flag of the original QMouseEvent accordingly.

      It also seems that QGraphicsSceneMouseEvent::setButtons is called twice consecutively in the event conversion process.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            peppe Giuseppe D'Angelo
            erelender Ender EREL
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes