Remove duplicated call to QGraphicsSceneMouseEvent::setButtons.

Task-number: QTBUG-8061
Change-Id: I1326d6b3d6c6b7c3f6dc383aa5fe66d5e1f0b229
Reviewed-by: Laszlo Papp <lpapp@kde.org>
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>
Reviewed-by: Andreas Aardal Hanssen <andreas@hanssen.name>